--- a/roles/consul/tasks/agent.yaml
+++ b/roles/consul/tasks/agent.yaml
@@ -1,5 +1,5 @@
 ---
-- name: "consul | allow consul on firewalld"
+- name: "Consul | allow consul on firewalld"
   ansible.posix.firewalld:
     port: "{{ item }}"
     permanent: true
@@ -11,9 +11,9 @@
     - "8301/udp"
     - "8302/udp"
   notify:
-    - "reload firewalld"
+    - "Reload firewalld"
 
-- name: "consul | render agent config"
+- name: "Consul | render agent config"
   ansible.builtin.template:
     src: "consul.hcl.j2"
     dest: "/etc/consul.d/agent.hcl"
@@ -21,4 +21,4 @@
     group: "consul"
     mode: '0644'
   notify:
-    - "restart consul"
+    - "Restart consul"
