--- a/roles/common/tasks/main.yaml
+++ b/roles/common/tasks/main.yaml
@@ -1,20 +1,20 @@
 ---
-- name: "python3 check and setup"
+- name: "Python3 check and setup"
   tags: ["python"]
   ansible.builtin.import_tasks:
     file: "python.yaml"
 
-- name: "basic setup"
+- name: "Basic setup"
   tags: ["basic"]
   ansible.builtin.import_tasks:
     file: "basic.yaml"
 
-- name: "user setup"
+- name: "User setup"
   tags: ["users"]
   ansible.builtin.import_tasks:
     file: "user.yaml"
 
-- name: "ensure running service"
+- name: "Ensure running service"
   ansible.builtin.service:
     name: "{{ item }}"
     state: "started"
