--- a/roles/common/tasks/python.yaml
+++ b/roles/common/tasks/python.yaml
@@ -1,25 +1,25 @@
 ---
-- name: "check for python3"
+- name: "Check for python3"
   ansible.builtin.shell:
     cmd: "which python3"
   register: pythoncheck
   failed_when: "pythoncheck.rc != 0 and pythoncheck.rc != 127"
   when: "'python3' not in ansible_facts.python.executable"
 
-- name: "install python3 when not present"
+- name: "Install python3 when not present"
   ansible.builtin.shell:
     cmd: "yum intall -y python3"
   register: pythoninstall
   failed_when: "pythoninstall.rc != 0"
   when: "pythoncheck is not skipped and 'no python3 in' in pythoncheck.stdout"
 
-- name: "python check debug"
+- name: "Python check debug"
   ansible.builtin.debug:
     msg: "{{ pythoncheck.stdout }}"
   when: "pythoncheck is not skipped"
   check_mode: false
 
-- name: "python install debug"
+- name: "Python install debug"
   ansible.builtin.debug:
     msg: "{{ pythoninstall.stdout }}"
   when: "pythoninstall is not skipped"
