--- a/roles/keepalived/tasks/main.yaml
+++ b/roles/keepalived/tasks/main.yaml
@@ -1,19 +1,19 @@
 ---
-- name: "install packages on the hosts"
+- name: "Install packages on the hosts"
   ansible.builtin.package:
     name: "{{ item }}"
     state: "present"
   with_items:
     - "keepalived"
   notify:
-    - "enable keepalived"
+    - "Enable keepalived"
 
-- name: "keepalived | create keepalived_script group"
+- name: "Keepalived | create keepalived_script group"
   ansible.builtin.group:
     name: "keepalived_script"
     state: "present"
 
-- name: "keepalived | create keepalived_script user"
+- name: "Keepalived | create keepalived_script user"
   ansible.builtin.user:
     name: "keepalived_script"
     groups: "keepalived_script"
@@ -23,7 +23,10 @@
     create_home: false
     system: true
 
-- name: "keepalived | ensure script path"
+- name: "Keepalived | ensure script path"
   ansible.builtin.file:
     dest: "/usr/libexec/keepalived/scripts"
     state: "directory"
+    mode: '0755'
+    owner: 'keepalived_script'
+    group: 'keepalived_script'
