--- a/roles/postgres/tasks/base.yaml
+++ b/roles/postgres/tasks/base.yaml
@@ -1,15 +1,15 @@
 ---
-- name: "add postgresql gpg key"
+- name: "Add postgresql gpg key"
   ansible.builtin.rpm_key:
     key: "https://download.postgresql.org/pub/repos/yum/keys/PGDG-RPM-GPG-KEY-RHEL"
     state: "present"
 
-- name: "add consul gpg key"
+- name: "Add consul gpg key"
   ansible.builtin.rpm_key:
     key: "https://rpm.releases.hashicorp.com/gpg"
     state: "present"
 
-- name: "provide consul through hashicorp repo"
+- name: "Provide consul through hashicorp repo"
   ansible.builtin.yum_repository:
     name: "hasicorp"
     description: "Hashicorp RPM repo"
@@ -18,16 +18,16 @@
     enabled: true
     gpgcheck: true
 
-- name: "add postgresql repository through pacakge"
+- name: "Add postgresql repository through pacakge"
   ansible.builtin.package:
     name: "https://download.postgresql.org/pub/repos/yum/reporpms/EL-9-x86_64/pgdg-redhat-repo-latest.noarch.rpm"
     state: "present"
 
-- name: "disable built-in postgresql module"
+- name: "Disable built-in postgresql module"
   ansible.builtin.command: "dnf -qy module disable postgresql"
   changed_when: false
 
-- name: "install packages on the hosts"
+- name: "Install packages on the hosts"
   ansible.builtin.package:
     name: "{{ item }}"
     state: "present"
@@ -38,4 +38,4 @@
     - "patroni-consul"
     - "keepalived"
   notify:
-    - "enable patroni"
+    - "Enable patroni"
