--- a/roles/postgres/tasks/users.yaml
+++ b/roles/postgres/tasks/users.yaml
@@ -1,28 +1,28 @@
 ---
-- name: "postgresql | check port"
+- name: "Postgresql | check port"
   ansible.builtin.wait_for:
     host: "{{ ansible_host }}"
     port: "{{ postgres.port }}"
     delay: 2
     timeout: 60
 
-- name: "patroni | check port"
+- name: "Patroni | check port"
   ansible.builtin.wait_for:
     host: "{{ ansible_host }}"
     port: "{{ patroni.port }}"
     delay: 2
     timeout: 60
 
-- name: "patroni | check current status"
+- name: "Patroni | check current status"
   ansible.builtin.command: "/usr/sbin/get-node-role.sh"
   register: "patroni_cmd"
   changed_when: false
 
-- name: "patroni | set patroni fact"
+- name: "Patroni | set patroni fact"
   ansible.builtin.set_fact:
     patroni: "{{ patroni_cmd.stdout | from_json }}"
 
-- name: "postgresql | setup users"
+- name: "Postgresql | setup users"
   community.postgresql.postgresql_user:
     # host: "{{ ansible_host }}"
     name: "{{ item.name }}"
@@ -34,7 +34,7 @@
     - "{{ postgres.users }}"
   when: 'patroni.Role == "Leader"'
 
-- name: "postgresql | grant privileges"
+- name: "Postgresql | grant privileges"
   community.postgresql.postgresql_privs:
     # host: "{{ ansible_host }}"
     database: "{{ item.database }}"
@@ -47,7 +47,7 @@
     - "{{ postgres.users }}"
   when: 'patroni.Role == "Leader"'
 
-- name: "postgresql | grant privileges"
+- name: "Postgresql | grant privileges"
   community.postgresql.postgresql_privs:
     # host: "{{ ansible_host }}"
     database: "{{ item.database }}"
